<resources>
    <string name="app_name">MealDesigner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navdrawer_recipes">Recipes</string>
    <string name="navdrawer_list">Shopping List</string>
    <string name="navdrawer_list_edit">Edit Shopping List</string>

    <string name="navdrawer_cook">Cook</string>
    <string name="navdrawer_share">Share</string>
    <string name="navdrawer_send">Send</string>
    <string name="navdrawer_fav">Favorites</string>
    <string name="navdrawer_communicate_divider">Communicate</string>
    <string name="applogo">AppLogo</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_info">Recipe Info</string>
    <string name="walk1">Please fill out the following information then click next. To exit at any time just click exit.</string>
    <string name="recipeName">Recipe Name;</string>
    <string name="prepTime">Prep Time (rounded to the nearest whole minute)</string>
    <string name="cookTime">Cook Time (rounded to the nearest whole minute)</string>
    <string name="portions">Recipe Yield/ Number of portions</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="newEquip">Add New Equipment</string>
    <string name="equipName">Enter the equipment name</string>
    <string name="equipDrop">Optional: Select items from drop down list</string>
    <string name="equipment">Please enter the necessary equipment to create the recipe. Keep clicking add new equipment until all items have been added, then click next</string>
    <string name="ingredients">Ingredients</string>
    <string name="walk3">Please enter the ingredient names and amounts. Keep clicking add new ingredient until all ingridents have been added, then click next</string>
    <string name="nameIngri">Ingredient Name</string>
    <string name="measure">Ingredient Amount. Please use the drop down to select the unit of measurement</string>
    <string name="newIngri">Add New Ingredient</string>
    <string name="newStep">Add New Step</string>
    <string name="walk4">Please enter the steps for the recipe one at a time. To add the next step click add new step, when all the steps have been added click next</string>
    <string name="stepInstruc">Enter step instructions</string>
    <string name="allergenInfo">Would you like to enter allergen information about the recipe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="createRecipe">Create My Recipe</string>
    <string name="newRecipe">Create New Recipe</string>
    <string name="allergenFish">Does this recipe contain Fish?</string>
    <string name="allergenDairy">Does this recipe contain Diary (Milk, Cheese)?</string>
    <string name="allergenSoy">Does this recipe contain Soy?</string>
    <string name="allergenEgg">Does this recipe contain Eggs?</string>
    <string name="allergenNut">Does this recipe contain Nuts?</string>
    <string name="walk6">Please enter the following information about food allergies. Enter Yes or No, then click Create My Recipe</string>
    <string name="steps">Steps</string>
    <string name="tools">Tools</string>
    <string name="recipe2">Some Recipe 2</string>
    <string name="recipe3">Some Recipe 3</string>
    <string name="recipe4">Some Recipe 4</string>
    <string name="convert">Convert</string>
    <string name="direction1">To access Recipes, Shopping List, or Favorites click on the icon at the top left (has three bars) then click on the name of whichever one you would like to view.</string>
    <string name="direction2">To Create A Recipe: click on Recipes. Once in Recipes click on "Add Recipe" which is located in the upper right corner.</string>
    <string name="direction3">To Delete A Recipe: click on Recipes. Click on the recipe name, once inside the actual recipe click "Delete" which is located in the upper right corner.</string>
    <string name="direction4">To Add a Recipe To Favorites: click on the star next to the recip name, when the star is yellow the recipe has been added to favorites. </string>
    <string name="direction5">To Remove a Recipe From Favorites: click on the yellow star next to the recipe name, when the star is not filled with a color the recipe has been removed from favorites. </string>
    <string name="direction6">To Add to Shopping List: click on Shopping List, at the bottom of the page click on edit. Or while inside a recipe click on "SHopList" in the upper bar to add the recipe's ingredients to the Shopping List.  </string>
    <string name="direction7">To Cook a Recipe: click on the "Cook" button while in the recipe and it will walk you through the recipe step by step.  </string>
    <string name="direction8">For further information or questions/comments please send an email to: mealdesignerapp@gmail.com </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert_00">Convert Measurements</string>
</resources>
